name:                cambridge
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/hiroxins/cambridge#readme
license:             BSD3
license-file:        LICENSE
author:              hiroxins
maintainer:          hiroxins@gmail.com
copyright:           Copyright(c) hiroxins
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable cambridge
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, text,MonadRandom ,random-shuffle
